--- a/playbooks/update_acl.yml
+++ b/playbooks/update_acl.yml
@@ -1,4 +1,4 @@
-#   Copyright 2018 Intentionet
+#   Copyright 2018 The Batfish Open Source Project
 #
 #   Licensed under the Apache License, Version 2.0 (the "License");
 #   you may not use this file except in compliance with the License.
@@ -66,7 +66,7 @@
         path: "{{ demo_snapshot_dir }}"
       tags: always
 
- 
+
     - name: Create temporary directory for config snippets
       file:
         path: "{{ tmp_cfg_dir }}"
